# prometei

./: .gitignore  README.md  addressbook.pkl  main.py  pyproject.toml  requirements.txt
backups/: addressbook_backup_20250717_182420_451112.pkl  addressbook_backup_20250717_191844_705962.pkl
config/: commands.py  general.py
controllers/: core.py  session.py
controllers/commands/: add_birthday.py  add_contact.py  address.py  birthday.py  change_contact.py  email.py  exit.py  find_user.py  help.py  phone.py  record.py  show_all.py  show_birthdays.py  show_phone.py
controllers/commands/address_book/: show_all.py
controllers/commands/notes/: add_note.py  change_note.py  find_note.py  find_notes_by_tag.py  remove_note.py  show_all_notes.py
controllers/telegram/: keyboards.py  telegram_wrapper.py
models/: address.py  address_book.py  email.py  phone.py  record.py
models/address_book/: address_book.py  birthday.py  name.py  phone.py  record.py
models/manager/: manager_prometei_id.py  prometei_id.py
models/note/: description.py  note.py  tag.py  title.py
storage/: interface.py  pickle_storage.py
utils/: custom_exceptions.py  date.py  decorators.py  helpers.py  search.py  validators.py
views/: cli_interface.py  interfaces.py  renderers.py  telegram_interface.py
views/completer/: command_completer.py  prompt_session.py
views/table/: __init__.py  cli_table_renderer.py  telegram_list_renderer.py
