[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

where = ["."]

include = [
  "config", "config.*",
  "controllers", "controllers.*",
  "backups", "backups.*",
  "models", "models.*",
  "storage", "storage.*",
  "utils", "utils.*",
  "views", "views.*"
]

[tool.setuptools]

py-modules = ["main"]

[project]
name = "prometei"
version = "0.1.0"
description = "Console assistant for recording contacts and notes."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "colorama==0.4.6",
  "prettytable==3.16.0",
]

[project.scripts]

prometei = "main:main"
